k8s/feature-flags.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: silly-demo-open-feature
  labels:
    app.kubernetes.io/name: silly-demo
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: silly-demo
  ports:
    - port: 30002
      targetPort: 8013
      nodePort: 30002
