k8s/ingress-frontend.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    description: This is a silly demo
    language: NodeJS
    owner: Viktor Farcic (viktor@farcic.com)
    team: dot
  labels:
    app.kubernetes.io/name: silly-demo-frontend
    backstage.io/kubernetes-id: silly-demo-frontend
  name: silly-demo-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: silly-demo-frontend.127.0.0.1.nip.io
    http:
      paths:
      - backend:
          service:
            name: silly-demo-frontend
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
